CHANGES
=======

* Start work on config processor
* All gate passed, this is Shaddock 0.7

0.7
---

* Exclude new venv folders from plake8
* Fix tests multi-hosts
* Fix tests
* Implement Debug comand
* Add new Container Cycle function
* Improve docker api arguments handling
* weird flake8 to pass the gate
* pep8 to pass the gate
* Migrate to docker-py 2.4
* Migration ongoing
* Import new API version
* Changelog
* Clean option and opti

0.6.2
-----

* Fix Sphinx issue
* Doc
* Clean model from unused opts and upgrade tox and pbr to py36
* Add useless systemctl stuff, [to amend]
* Clean ops

0.6.1
-----

* Fix docker check for new dAPI
* Fix docker check for new docker api result
* Fix dockercheck
* Documentation and tests
* Fix multiple services with the same name, enhance clusters handeling and various bufixes
* Documenting and Sphinx conf

0.6.0
-----

* Documenting
* Fix tests and document
* Configure Sphinx and document
* Fix tests
* Configure Sphinx and document
* Change notation of IPs and Volumes to match Docker CLI
* Fix ports binding
* fix port bindings
* Add new API Ip def
* IP for docker v1.6
* Docker1.6 compatibility
* fix key error and sched tests
* pep8
* Optimize performances to 0.7sec per 100services
* Broken, too many recursions
* Fix scheduling mono service
* -2 Unworking but devided ps time by 2
* Flake8
* Add default file shaddock.yml
* Abandon less API calls as no change in result
* Reduce api calls
* refacto
* Global refactoring
* Refacto frontend
* Add ports bindings defintion possibility
* Fix scheduler
* PEP8 and tests
* PEP8 + Fix API TLS
* Move tests
* Write tests
* Model refactoring
* Refactoring multi-hosts
* Quick and dirty fix for checks in case of retry or sleep
* Update jinja2 requirement (again)
* Add jinja2 requirement
* Add jinja2 requirement
* Flake and pepe8 refacto
* Try catch list frontend
* Documentation in README Commenting Fix image\_dir from model and CLI
* Remove pyvenv dir
* Correction IndentationError