@@ -8,4 +8,5 @@ infrastructure.
 
 **Sources:** https://github.com/epheo/shaddock
 
-Shaddock is distributed under the terms of the Apache License, Version 2.0. The full terms and conditions of this license are detailed in the LICENSE file.
+Shaddock is distributed under the terms of the Apache License, Version 2.0. 
+The full terms and conditions of this license are detailed in the LICENSE file.
