@@ -5,9 +5,6 @@ Usage
 Using the command line interface
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-.. autoprogram-cliff:: shaddock.cli.shell.ShaddockShell
-   :application: shaddock
-
 .. code:: raw
     
     usage: shdk [--version] [-v] [--log-file LOG_FILE] [-q] [-h] [--debug]
@@ -73,3 +70,4 @@ Using shaddock in a project
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     import shaddock
 
+.. autoprogram-cliff:: shaddock.cli.shell.ShaddockShell
