@@ -21,12 +21,13 @@ from cliff.lister import Lister
 from cliff.show import ShowOne
 from shaddock.drivers.docker.api import DockerApi
 from shaddock.drivers.docker.container import Container
-from shaddock.model import ModelDefinition
 from shaddock.scheduler import Scheduler
 
 from shaddock.configprocessor import ConfigProcessor
 from shaddock.githelper import GitHelper
 from shaddock.exceptions import TemplateFileError
+
+# from tinydictdb import TinyDictDb
 
 
 class Process(Command):
@@ -114,7 +115,7 @@ class Cycle(Command):
 
 
 class Debug(Command):
-    """Debug a container
+    """Debug
     Open an interactive shell in a similar container
     """
 
@@ -131,7 +132,6 @@ class Debug(Command):
 
 
 class Start(ShowOne):
-    """Start a new container"""
 
     def get_parser(self, prog_name):
         parser = super(Start, self).get_parser(prog_name)
@@ -146,7 +146,6 @@ class Start(ShowOne):
 
 
 class Stop(ShowOne):
-    """Stop a container"""
 
     def get_parser(self, prog_name):
         parser = super(Stop, self).get_parser(prog_name)
@@ -161,7 +160,6 @@ class Stop(ShowOne):
 
 
 class Restart(ShowOne):
-    """Restart a container"""
 
     def get_parser(self, prog_name):
         parser = super(Restart, self).get_parser(prog_name)
@@ -257,6 +255,7 @@ class List(Lister):
     def get_parser(self, prog_name):
         parser = super(List, self).get_parser(prog_name)
         parser.add_argument('name', nargs='?', default=None)
+        # db = TinyDictDb(path=db_path)
 
         # t is one of the tuples created from a dictionary
         hl = [{}]
@@ -275,18 +274,18 @@ class List(Lister):
 
         columns = ('#', 'Cluster', 'Name', 'State', 'Host', 'IP', 'Image')
         lines = ()
-        for svc in model.get_services_list():
-            svc_cfg = model.build_service_dict(svc)
-            c = Container(svc_cfg, containers_all)
-            host = c.cfg.get('host', 'localhost')
-            ip = c.info.get('Ip')
-            priority = c.cfg.get('priority', '')
-            tag = c.cfg.get('image')
-            cluster = c.cfg['cluster']['name']
-            state = c.info.get('State')
+        # for svc db.get_services_list():
+        #     svc_cfg = db.build_service_dict(svc)
+        #     c = Container(svc_cfg, containers_all)
+        #     host = c.cfg.get('host', 'localhost')
+        #     ip = c.info.get('Ip')
+        #     priority = c.cfg.get('priority', '')
+        #     tag = c.cfg.get('image')
+        #     cluster = c.cfg['cluster']['name']
+        #     state = c.info.get('State')
 
-            line = (priority, cluster, svc['name'], state, host, ip, tag)
-            lines = lines + (line, )
+        #     line = (priority, cluster, svc['name'], state, host, ip, tag)
+        #     lines = lines + (line, )
         return columns, lines
 
 
